# wpdocker-v2

./: .gitignore  README.md  core.env  core.env.sample  functions_list.md  install.sh  pyproject.toml  pytest.ini  requirements.txt  setup.py  wpdocker.bat  wpdocker.sh
.github/workflows/: dev-build.yml  main-build.yml
config/: mysql.conf
core/: core.env.sample
core/backend/: core_loader.py  init.py  menu_main.py  system_bootstrap.py
core/backend/abc/: __init__.py  php_extension.py  prompt_base.py
core/backend/bootstraps/: config_bootstrap.py  docker_bootstrap.py  misc_bootstrap.py  mysql_bootstrap.py  nginx_bootstrap.py  rclone_bootstrap.py  redis_bootstrap.py  system_bootstrap.py  webserver_bootstrap.py  wpcli_bootstrap.py
core/backend/menu/: main.py
core/backend/models/: config.py
core/backend/objects/: compose.py  config.py  container.py  downloader.py  menu.py
core/bash-utils/: docker_utils.sh  file_operations.sh  get_path.sh  load_config.sh  messages_utils.sh  runtime_utils.sh  validate.sh
core/templates/: docker-compose.mysql.yml.template  docker-compose.nginx.yml.template  docker-compose.redis.yml.template  docker-compose.runtime.yml.template  docker-compose.wpcli.yml.template  nginx-vhost.conf.template  nginx.conf.template
docker-compose/: docker-compose.runtime.yml
installers/: install.bat  install.sh  upgrade.bat  upgrade.sh
scripts/: backup_to_remote.sh  backup_website.sh  check_containers.py  init.sh  init_python.sh  init_python_runtime.sh  install_python.sh  run.py.sh
scripts/cron/: run_cron_jobs.sh
src/: __init__.py  main.py  version.py
src/bash/: load_config.sh
src/common/: __init__.py  logging.py
src/core/: __init__.py  init.py  loader.py
src/features/: __init__.py
src/interfaces/: AbstractPHPExtension.py  AbstractPrompt.py  IStorageProvider.py  __init__.py
src/scripts/: backup_to_remote.sh  backup_website.sh  build_package.py  bump_version.py  check_containers.py  check_venv.sh  find_vietnamese.py  init.sh  init_python.sh  install_python.sh
tests/backend/: test_database.py
(+387 files in other folders)
