[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wpdocker"
version = "0.1.4"  # This will be updated by CI/CD
description = "Docker-based WordPress development environment"
authors = [
    {name = "Thach Pham", email = "contact@example.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: DevOps",
]
dependencies = [
    "colorama>=0.4.6",
    "jsons>=1.6.3",
    "python-on-whales>=0.76.1",
    "questionary>=2.1.0",
    "random-password-generator>=2.2.0",
    "requests>=2.32.3",
    "rich>=14.0.0",
    "python-crontab>=3.2.0",
    "inquirer>=3.4.0",
    "humanize>=4.12.3",
    "tabulate>=0.9.0",
    "psutil>=7.0.0",
    "tqdm>=4.67.1",
    "click>=8.2.0",
    "passlib>=1.7.4",
    "semver>=3.0.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "pytest-env>=1.1.4",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/wpdocker-v2"
"Bug Tracker" = "https://github.com/yourusername/wpdocker-v2/issues"

[project.scripts]
wpdocker = "src.main:main"

[tool.setuptools]
package-dir = {"" = "."}
packages = ["src"]
include-package-data = true

[tool.setuptools.package-data]
"src" = ["templates/**/*", "scripts/**/*.sh", "bash/**/*.sh"]

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]